#862km6dxx: fix modals showing two scrollbars

--- a/ShiftBlazor/wwwroot/main.css
+++ b/ShiftBlazor/wwwroot/main.css
@@ -1,4 +1,8 @@
-﻿.shift-scrollable-content-wrapper {
+﻿.shift-modal-background + .mud-dialog {
+    overflow: hidden;
+}
+
+.shift-scrollable-content-wrapper {
     max-height: calc(100vh - 175px);
     overflow: auto;
 }
